; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgb/common/extr_cxgb_ael1002.c_ael2020_intr_disable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgb/common/extr_cxgb_ael1002.c_ael2020_intr_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cphy = type { i32 }
%struct.reg_val = type { i32, i32, i32, i32 }

@MDIO_DEV_PMA_PMD = common dso_local global i32 0, align 4
@AEL2020_GPIO_CTRL = common dso_local global i32 0, align 4
@AEL2020_GPIO_LSTAT = common dso_local global i32 0, align 4
@AEL2020_GPIO_MODDET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cphy*)* @ael2020_intr_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ael2020_intr_disable(%struct.cphy* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cphy*, align 8
  %4 = alloca [3 x %struct.reg_val], align 16
  %5 = alloca i32, align 4
  store %struct.cphy* %0, %struct.cphy** %3, align 8
  %6 = getelementptr inbounds [3 x %struct.reg_val], [3 x %struct.reg_val]* %4, i64 0, i64 0
  %7 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %6, i32 0, i32 0
  %8 = load i32, i32* @MDIO_DEV_PMA_PMD, align 4
  store i32 %8, i32* %7, align 16
  %9 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %6, i32 0, i32 1
  %10 = load i32, i32* @AEL2020_GPIO_CTRL, align 4
  store i32 %10, i32* %9, align 4
  %11 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %6, i32 0, i32 2
  store i32 65535, i32* %11, align 8
  %12 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %6, i32 0, i32 3
  %13 = load i32, i32* @AEL2020_GPIO_LSTAT, align 4
  %14 = mul nsw i32 %13, 4
  %15 = shl i32 11, %14
  store i32 %15, i32* %12, align 4
  %16 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %6, i64 1
  %17 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %16, i32 0, i32 0
  %18 = load i32, i32* @MDIO_DEV_PMA_PMD, align 4
  store i32 %18, i32* %17, align 16
  %19 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %16, i32 0, i32 1
  %20 = load i32, i32* @AEL2020_GPIO_CTRL, align 4
  store i32 %20, i32* %19, align 4
  %21 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %16, i32 0, i32 2
  store i32 65535, i32* %21, align 8
  %22 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %16, i32 0, i32 3
  %23 = load i32, i32* @AEL2020_GPIO_MODDET, align 4
  %24 = mul nsw i32 %23, 4
  %25 = shl i32 1, %24
  store i32 %25, i32* %22, align 4
  %26 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %16, i64 1
  %27 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %26, i32 0, i32 0
  store i32 0, i32* %27, align 16
  %28 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %26, i32 0, i32 1
  store i32 0, i32* %28, align 4
  %29 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %26, i32 0, i32 2
  store i32 0, i32* %29, align 8
  %30 = getelementptr inbounds %struct.reg_val, %struct.reg_val* %26, i32 0, i32 3
  store i32 0, i32* %30, align 4
  %31 = load %struct.cphy*, %struct.cphy** %3, align 8
  %32 = getelementptr inbounds [3 x %struct.reg_val], [3 x %struct.reg_val]* %4, i64 0, i64 0
  %33 = call i32 @set_phy_regs(%struct.cphy* %31, %struct.reg_val* %32)
  store i32 %33, i32* %5, align 4
  %34 = load i32, i32* %5, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %1
  %37 = load i32, i32* %5, align 4
  store i32 %37, i32* %2, align 4
  br label %41

38:                                               ; preds = %1
  %39 = load %struct.cphy*, %struct.cphy** %3, align 8
  %40 = call i32 @t3_phy_lasi_intr_disable(%struct.cphy* %39)
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %38, %36
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}

declare dso_local i32 @set_phy_regs(%struct.cphy*, %struct.reg_val*) #1

declare dso_local i32 @t3_phy_lasi_intr_disable(%struct.cphy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
